hphp/hack/test/ifc/check/shape_idx.php.exp
=== IFC analysis results for shape_idx.php
File "shape_idx.php", line 84, characters 3-44:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "shape_idx.php", line 11, characters 14-19:
  This may be the data source with policy `B`
  File "shape_idx.php", line 8, characters 16-27:
  This may be the data sink with policy `A`
File "shape_idx.php", line 91, characters 3-44:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "shape_idx.php", line 11, characters 14-19:
  This may be the data source with policy `B`
  File "shape_idx.php", line 8, characters 16-27:
  This may be the data sink with policy `A`
File "shape_idx.php", line 108, characters 3-31:
Data with policy `A` appears in context `PUBLIC`. (Typing[4379])
  File "shape_idx.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "shape_idx.php", line 19, characters 16-23:
  This may be the data sink with policy `PUBLIC`
  File "shape_idx.php", line 29, characters 3-30:
  Another program point contributing to the illegal flow
  File "shape_idx.php", line 105, characters 5-16:
  Another program point contributing to the illegal flow
  File "shape_idx.php", line 104, characters 7-15:
  Another program point contributing to the illegal flow
File "shape_idx.php", line 74, characters 3-37:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "shape_idx.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "shape_idx.php", line 13, characters 16-27:
  This may be the data sink with policy `B`
  File "shape_idx.php", line 71, characters 7-15:
  Another program point contributing to the illegal flow
  File "shape_idx.php", line 72, characters 5-16:
  Another program point contributing to the illegal flow
File "shape_idx.php", line 44, characters 3-26:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "shape_idx.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "shape_idx.php", line 13, characters 16-27:
  This may be the data sink with policy `B`
  File "shape_idx.php", line 24, characters 3-30:
  Another program point contributing to the illegal flow
  File "shape_idx.php", line 42, characters 3-27:
  Another program point contributing to the illegal flow
File "shape_idx.php", line 51, characters 3-26:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "shape_idx.php", line 6, characters 14-19:
  This may be the data source with policy `A`
  File "shape_idx.php", line 13, characters 16-27:
  This may be the data sink with policy `B`
  File "shape_idx.php", line 24, characters 3-30:
  Another program point contributing to the illegal flow
  File "shape_idx.php", line 49, characters 3-41:
  Another program point contributing to the illegal flow
File "shape_idx.php", line 65, characters 3-23:
Data with policy `B` appears in context `A`. (Typing[4379])
  File "shape_idx.php", line 13, characters 16-27:
  This may be the data source with policy `B`
  File "shape_idx.php", line 8, characters 16-27:
  This may be the data sink with policy `A`
  File "shape_idx.php", line 24, characters 3-30:
  Another program point contributing to the illegal flow
  File "shape_idx.php", line 63, characters 3-53:
  Another program point contributing to the illegal flow
File "shape_idx.php", line 65, characters 3-23:
Data with policy `A` appears in context `B`. (Typing[4379])
  File "shape_idx.php", line 8, characters 16-27:
  This may be the data source with policy `A`
  File "shape_idx.php", line 13, characters 16-27:
  This may be the data sink with policy `B`
  File "shape_idx.php", line 24, characters 3-30:
  Another program point contributing to the illegal flow
  File "shape_idx.php", line 63, characters 3-53:
  Another program point contributing to the illegal flow
File "shape_idx.php", line 65, characters 3-23:
Data with policy `PRIVATE` appears in context `B`. (Typing[4379])
  File "shape_idx.php", line 16, characters 16-24:
  This may be the data source with policy `PRIVATE`
  File "shape_idx.php", line 13, characters 16-27:
  This may be the data sink with policy `B`
  File "shape_idx.php", line 24, characters 3-30:
  Another program point contributing to the illegal flow
  File "shape_idx.php", line 63, characters 3-53:
  Another program point contributing to the illegal flow
File "shape_idx.php", line 65, characters 3-23:
Data with policy `PRIVATE` appears in context `A`. (Typing[4379])
  File "shape_idx.php", line 16, characters 16-24:
  This may be the data source with policy `PRIVATE`
  File "shape_idx.php", line 8, characters 16-27:
  This may be the data sink with policy `A`
  File "shape_idx.php", line 24, characters 3-30:
  Another program point contributing to the illegal flow
  File "shape_idx.php", line 63, characters 3-53:
  Another program point contributing to the illegal flow
